<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10pt"
    android:layout_marginRight="10pt"
    android:orientation="vertical"
    tools:context=".LoginFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10pt"
        android:text="Log in"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Login"
            android:textColor="#000000"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="Please enter login"
            android:textSize="17sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:text="Password"
            android:textColor="#000000"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:hint="Plese enter password"
            android:inputType="textPassword"
            android:textSize="17sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Log in as a guest"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15pt"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/LogButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/colorPrimary"
            android:enabled="false"
            android:text="Login"
            android:textAllCaps="false"
            android:textColor="@color/colorBackground"
            android:textSize="17sp"
            app:cornerRadius="3dp"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/RegButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorBackground"
            android:enabled="false"
            android:text="Register"
            android:textAllCaps="false"
            android:textColor="#000000"
            app:backgroundTint="@android:color/transparent"
            app:cornerRadius="3dp"
            app:rippleColor="#33AAAAAA"
            app:strokeColor="#808080"
            app:strokeWidth="1dp" />

    </LinearLayout>
</LinearLayout>